vars: add new color variables from 2.2025.6 update
Closes #167.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -456,10 +456,14 @@ ac5 = var(--ac-5)
         --compose-background-rgb: var(--bg-1-rgb) //16,29,36;
         --compose-background-focused: #203946;
         --compose-background-focused-rgb: 32,57,70;
+        --compose-border: var(--bg-5) //#2f3437;
+        --compose-border-rgb: var(--bg-5-rgb) //47.1,51.86667,54.9;
         --compose-border-focused: #274656;
         --compose-border-focused-rgb: 39,70,86;
         --compose-panel-background: var(--bg-3) //#222e35;
         --compose-panel-background-rgb: var(--bg-3-rgb) //34,46,53;
+        --compose-primary: var(--fg-1) //#f1f1f2;
+        --compose-primary-rgb: var(--fg-1-rgb) //241,241,242;
         --conversation-panel-background: var(--bg-1) //#0b1419;
         --conversation-panel-background-rgb: var(--bg-1-rgb) //11.29231,20.46731,25.40769;
         --conversation-panel-border: var(--bg-5) //#f1f1f214;
@@ -524,6 +528,8 @@ ac5 = var(--ac-5)
         --intro-background-rgb: var(--bg-1-rgb) //34,46,53;
         --intro-border: var(--ac-3) //#054740;
         --intro-border-rgb: var(--ac-3-rgb) //5,71,64;
+        --intro-secondary: var(--fg-3) //#a6a8aa;
+        --intro-secondary-rgb: var(--fg-3-rgb) //166,168,170;
         --inverse: #f1f1f2;
         --inverse-rgb: var(--fg-3-rgb) //241,241,242;
         --labels-icon: #f1f1f266;
@@ -552,6 +558,8 @@ ac5 = var(--ac-5)
         --message-background-deep-rgb: var(--bg-0-rgb) //8,14,18;
         --message-placeholder-icon: #cccccc4d;
         --message-placeholder-icon-rgb: 204,204,204;
+        --message-primary: var(--fg-1) //#f1f1f2f2;
+        --message-primary-rgb: var(--fg-1-rgb) //241,241,242;
         --message-selection-highlight: s('rgba(var(--ac-0-rgb), 0.1)') //#f1f1f20d;
         --message-selection-highlight-rgb: var(--ac-0-rgb) //241,241,242;
         --modal-backdrop: s('rgba(var(--bg-0-rgb), 0.95)') //#080e12d9;
@@ -628,6 +636,10 @@ ac5 = var(--ac-5)
         --product-thumb-background-rgb: var(--bg-3-rgb) //28,40,47;
         --product-thumb-background-deeper: #2b3e49;
         --product-thumb-background-deeper-rgb: 43.232,61.76,72.568;
+        --progress-background: var(--bg-2) //#2a2f32;
+        --progress-background-rgb: var(--bg-2-rgb) //41.6,47.46667,50.4;
+        --progress-primary: var(--ac-0) //#0c897c;
+        --progress-primary-rgb: var(--ac-0) //12,137,124;
         --ptt-blue: var(--blue) //#4fc3f7;
         --ptt-blue-rgb: var(--blue-rgb) //79,195,247;
         --ptt-button-cancel: var(--red) //#e53935cc;
@@ -646,6 +658,8 @@ ac5 = var(--ac-5)
         --quick-action-button-background-rgb: var(--bg-4-rgb) //8,14,18;
         --rich-text-panel-background: var(--bg-3) //#1c282f;
         --rich-text-panel-background-rgb: var(--bg-3-rgb) //28,40,47;
+        --search-input-background: var(--bg-3) //#2a2f32;
+        --search-input-background-rgb: var(--bg-3-rgb) //41.6,47.46667,50.4;
         --secondary: var(--fg-3) //#f1f1f299;
         --secondary-rgb: var(--fg-3-rgb) //241,241,242;
         --secondary-light: var(--fg-2) //#f1f1f240;
@@ -666,6 +680,8 @@ ac5 = var(--ac-5)
         --spinner-incoming-rgb: var(--fg-5-rgb) //96,105,110;
         --spinner-outgoing: var(--ac-5) //#4c7a75;
         --spinner-outgoing-rgb: var(--ac-5-rgb) //76,122,117;
+        --startup-background: var(--bg-0) //#131c21;
+        --startup-background-rgb: var(--bg-0-rgb) //18.6,28.22,33.4;
         --status-background: var(--bg-1) //#000;
         --status-background-rgb: var(--bg-1-rgb) //0,0,0;
         --status-background-hover: var(--bg-2) //#242424;
