--- a/wa.user.styl
+++ b/wa.user.styl
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      2.13.0
+@version      2.14.0
 @license      MIT
 @preprocessor stylus
 
@@ -249,10 +249,10 @@ ac5 = var(--ac-5)
 @-moz-document domain('web.whatsapp.com') {
     :root:not(#z), .dark:not(#z) {
         /// Userstyle info and announcements.
-        --version: 'Dark-WhatsApp 2.13.0 — June 16th, 2020';
-        --message: 'Towards v3 of DWA! Continuing the trend of porting old ' + \
-                   'features to the latest update; check the changelog to' + \
-                   'see what is new!';
+        --version: 'Dark-WhatsApp 2.14.0 — June 18th, 2020';
+        --message: 'Towards v3 of DWA! Updated to `v2.2025.6` of WhatsApp ' + \
+                   'Web and fixed options for broken RTL messages; check ' + \
+                   'the changelog to see what is new!';
         --changes: '\A\A https://github.com/vednoc/dark-whatsapp';
 
         /// Custom UI font.
