global: add colors for default option elements

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -810,6 +810,8 @@ ac5 = var(--ac-5)
         background-image: none i
         c: fg0 0 bg0
 
+        option { c: fg1 0 bg3 }
+
         /// Feat -> Custom font.
         &, button, input { font-family: var(--ui-font) }
 
