chore: fix compile errors for `to_rgba` mixin

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1293,13 +1293,13 @@ ac5 = var(--ac-5)
 
         /// System messages.
         ._1E1g0 {
-            border: 1px solid to_rgba('--fg-3', 0.2)
+            border: 1px solid to_rgba('fg-3', 0.2)
             /// Tweak text shadow.
-            text-shadow: 0 1px 0 to_rgba('--fg-3', 0.2)
+            text-shadow: 0 1px 0 to_rgba('fg-3', 0.2)
         }
 
         /// End-to-end encryption notification.
-        ._2n04H { border: 1px solid to_rgba('--notification-e2e-text', 0.3) }
+        ._2n04H { border: 1px solid to_rgba('notification-e2e-text', 0.3) }
 
         /// Feat -> Custom chat background.
         /[data-asset-chat-background-light] {
