--- a/wa.user.styl
+++ b/wa.user.styl
@@ -864,25 +864,33 @@ ac5 = var(--ac-5)
         /// Settings -> Tweaks for 'Set Chat Wallpaper' area. #149
         /[style *= 'd-color: rgb(237\, 233\, 228)'] {
             position: relative
-            c: 0 0 bg3
+            c: 0 0 bg1
 
             /// Override selected wallpaper.
-            --blue-light: bg5
-            --inverse: bg5
+            --blue-light: ac3
+            --inverse: ac3
 
             /// Add pseudo text.
             &::before {
-                content: 'Use this with Dark-WhatsApp'
+                content: ''
+                filter: invert(var(--chat-bg-i)) opacity(var(--chat-bg-o))
+                background: var(--chat-image) i
                 position: absolute
-                font-size: 15px
+                height: 100%
                 width: 100%
-                c: fg1
             }
 
             /// Expand default chat wallpaper.
             &:first-child {
+                border: 4px solid bg3 i
                 &, &::after { width: calc(3 * 82px + 30px) i }
-                span { font-size: 0 i }
+                span {
+                    font-size: 0 i
+                    &::before {
+                        content: 'Use this with Dark-WhatsApp'
+                        font-size: 16px i
+                    }
+                }
             }
         }
 
