left: override preview for light gray colors
Can also be used as a trick to _remove_ the default chat background
wallpaper.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -892,6 +892,14 @@ ac5 = var(--ac-5)
                     }
                 }
             }
+
+            /// Override light gray wallpapers.
+            /[style *= 'rgb(222\, 227\, 233)'],
+            /[style *= 'rgb(217\, 218\, 222)'],
+            /[style *= 'rgb(192\, 193\, 196)'] {
+                border: 4px solid bg3 i
+                c: 0 0 bg1
+            }
         }
 
         /// Global -> Scrollbar styles.
