chat: loading previous messages border

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1332,6 +1332,9 @@ ac5 = var(--ac-5)
         /// End-to-end encryption notification.
         ._2n04H { border: 1px solid to_rgba('notification-e2e-text', 0.3) }
 
+        /// Loading previous messages.
+        ._2J60S { border: 1px solid bg5 }
+
         /// Feat -> Custom chat background.
         /[data-asset-chat-background-light] {
             filter: invert(var(--chat-bg-i)) opacity(var(--chat-bg-o))
