refactor: move input's radius to global styles

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1156,6 +1156,9 @@ ac5 = var(--ac-5)
             if (fullscreen) { content: none i }
         }
 
+        /// Feat -> Input border radius.
+        ._3xpD_ { rad: var(--r-inputs) i }
+
         /// Dropdowns -> Chat/Header.
         > span > div, ._2s_eZ {
             &[style ^= 'transform-origin:'][tabindex] {
@@ -1220,9 +1223,6 @@ ac5 = var(--ac-5)
 
             /// Remove animation.
             /._1yO24 { animation: none i }
-
-            /// Feat -> Border radius.
-            label { rad: var(--r-inputs) i }
         }
 
         /// Left -> Resets.
@@ -1413,7 +1413,7 @@ ac5 = var(--ac-5)
                 border-bottom: 1px solid bg5 i
             }
 
-            /// Feat -> Border radius.
+            /// Feat -> Input border radius.
             ._3uMse { rad: var(--r-inputs) i }
         }
     }
