--- a/wa.user.styl
+++ b/wa.user.styl
@@ -929,8 +929,8 @@ ac5 = var(--ac-5)
         /// Global/shared contacts.
         &, /._1S7ke { c: 0 0 bg5 }
 
-        /// Avatars/images/new group/shared contacts.
-        &, > img, /._18cLH, /._3_Hvt, /._2H1bg, /._1S7ke {
+        /// Avatars/images/new group/shared contacts/contact avatar.
+        &, > img, /._18cLH, /._3_Hvt, /._2H1bg, /._1S7ke, /._2SNSv {
             rad: var(--r-avatars) i
         }
 
