vars: add theme colors to misc color variables

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -463,12 +463,12 @@ ac5 = var(--ac-5)
         --checkbox-mark-rgb: var(--white-rgb) //16,29,36;
         --compose-background: var(--bg-1) //#101d24;
         --compose-background-rgb: var(--bg-1-rgb) //16,29,36;
-        --compose-background-focused: #203946;
-        --compose-background-focused-rgb: 32,57,70;
+        --compose-background-focused: var(--bg-0) //#203946;
+        --compose-background-focused-rgb: var(--bg-0-rgb) //32,57,70;
         --compose-border: var(--bg-5) //#2f3437;
         --compose-border-rgb: var(--bg-5-rgb) //47.1,51.86667,54.9;
-        --compose-border-focused: #274656;
-        --compose-border-focused-rgb: 39,70,86;
+        --compose-border-focused: var(--bg-5) //#274656;
+        --compose-border-focused-rgb: var(--bg-5-rgb) //39,70,86;
         --compose-panel-background: var(--bg-3) //#222e35;
         --compose-panel-background-rgb: var(--bg-3-rgb) //34,46,53;
         --compose-primary: var(--fg-1) //#f1f1f2;
@@ -565,8 +565,8 @@ ac5 = var(--ac-5)
         --menu-tabs-list-active-rgb: var(--ac-0-rgb) //0,175,156;
         --message-background-deep: var(--bg-0) //#080e1259;
         --message-background-deep-rgb: var(--bg-0-rgb) //8,14,18;
-        --message-placeholder-icon: #cccccc4d;
-        --message-placeholder-icon-rgb: 204,204,204;
+        --message-placeholder-icon: var(--fg-3) //#cccccc4d;
+        --message-placeholder-icon-rgb: var(--fg-3-rgb) //204,204,204;
         --message-primary: var(--fg-1) //#f1f1f2f2;
         --message-primary-rgb: var(--fg-1-rgb) //241,241,242;
         --message-selection-highlight: to_rgba('ac-0', 0.1) //#f1f1f20d;
@@ -617,7 +617,7 @@ ac5 = var(--ac-5)
         --panel-header-background-rgb: var(--bg-3-rgb) //34,46,53;
         --panel-header-icon: var(--fg-3) //#9ea3a6;
         --panel-header-icon-rgb: var(--fg-3-rgb) //158,163,166;
-        --panel-primary: #f1f1f259;
+        --panel-primary: var(--fg-3) //#f1f1f259;
         --panel-primary-rgb: var(--fg-3-rgb) //241,241,242;
         --payment-amount: #00a593;
         --payment-amount-rgb: 0,164.8,146.90743;
@@ -629,8 +629,8 @@ ac5 = var(--ac-5)
         --payment-status-success-rgb: 64,207,108;
         --payment-status-waiting: var(--fg-1) //#f1f1f273;
         --payment-status-waiting-rgb: var(--fg-3-rgb) //241,241,242;
-        --photopicker-overlay-background: #212c31cc;
-        --photopicker-overlay-background-rgb: 33,44,49;
+        --photopicker-overlay-background: to_rgba('bg-3', 0.8) //#212c31cc;
+        --photopicker-overlay-background-rgb: var(--bg-3-rgb) //33,44,49;
         --popup-panel-background: var(--bg-2) //#080e1233;
         --popup-panel-background-rgb: var(--bg-2-rgb) //8,14,18;
         --primary: var(--fg-2) //#a5aaad;
@@ -643,8 +643,8 @@ ac5 = var(--ac-5)
         --primary-title-rgb: var(--fg-2-rgb) //212,213,215;
         --product-thumb-background: var(--bg-3) //#1c282f;
         --product-thumb-background-rgb: var(--bg-3-rgb) //28,40,47;
-        --product-thumb-background-deeper: #2b3e49;
-        --product-thumb-background-deeper-rgb: 43.232,61.76,72.568;
+        --product-thumb-background-deeper: var(--bg-2) //#2b3e49;
+        --product-thumb-background-deeper-rgb: var(--bg-2-rgb) //43.232,61.76,72.568;
         --progress-background: var(--bg-2) //#2a2f32;
         --progress-background-rgb: var(--bg-2-rgb) //41.6,47.46667,50.4;
         --progress-primary: var(--ac-0) //#0c897c;
@@ -708,7 +708,7 @@ ac5 = var(--ac-5)
         --system-message-background: var(--ac-5) //#1e2a30;
         --system-message-background-rgb: var(--ac-5-rgb) //30,42,48;
         --system-message-text: to_rgba('fg-1', 0.87) //#f1f1f2de;
-        --system-message-text-rgb: 241,241,242;
+        --system-message-text-rgb: var(--fg-1-rgb) //241,241,242;
         --teal-hover: #00b7a1;
         --teal-hover-rgb: 0,183,161;
         --teal-pale: #5fc8bc;
