vars: add colors for empty-state-icon
Appears to be only be used in 'no blocked contacts yet' area.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -495,8 +495,8 @@ ac5 = var(--ac-5)
         --dropdown-background-hover-rgb: var(--bg-3-rgb) //32,44,51;
         --empty-state-background: var(--bg-3) //#1c282f;
         --empty-state-background-rgb: var(--bg-3-rgb) //28,40,47;
-        --empty-state-icon: #757c81;
-        --empty-state-icon-rgb: 117,124,129;
+        --empty-state-icon: var(--fg-4) //#757c81;
+        --empty-state-icon-rgb: var(--fg-4-rgb) //117,124,129;
         --focus: var(--ac-3) //#68bbe4;
         --focus-rgb: var(--ac-3-rgb) //104,187,228;
         --focus-animation: var(--ac-3) //#68bbe442;
