feat: port colors for replies and members option

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -73,6 +73,8 @@
     'Hide all                    ': 'hide          ',
 }
 
+@var checkbox c_g_c      'Theme colors for replies and group members' 1
+
 @var text     divider    '⚠‼ IMPORTANT: Everything below is BROKEN' ''WIP''
 
 @var checkbox chat_b_img 'Enable blurred images/videos' 0
@@ -101,8 +103,6 @@
 @var color    b_r_bg     'Right message bubble color' #333a47
 
 @var checkbox ss_mode    '[Dev]: Screenshot mode' 0
-
-@var checkbox c_g_c      'Theme colors in groups' 1
 
 @var select   theme      'Color-scheme' {
     'Dark blue (old) *': 'old',
@@ -1014,10 +1014,6 @@ ac5 = var(--ac-5)
                         rad: var(--r-menus) i
                     }
                 }
-
-                /// Bar/member colors.
-                /.color-1 { c: ac0 }
-                /.bg-color-1 { c: 0 0 ac0 }
             }
 
             /// Fill color for unread icon. @upstream
@@ -1427,6 +1423,58 @@ ac5 = var(--ac-5)
 
             /// Feat -> Input border radius.
             ._3uMse { rad: var(--r-inputs) i }
+        }
+    }
+
+    /// Feat -> Colors for replies and group members.
+    if (c_g_c) {
+        :not(#z) .color {
+            &-0  { c: blue }
+            &-1  { c: cyan }
+            &-2  { c: green }
+            &-3  { c: violet }
+            &-4  { c: magenta }
+            &-5  { c: red }
+            &-6  { c: orange }
+            &-7  { c: yellow }
+            &-8  { c: blue; filter: hue-rotate(20deg) }
+            &-9  { c: cyan; filter: hue-rotate(20deg) }
+            &-10 { c: green; filter: hue-rotate(20deg) }
+            &-11 { c: violet; filter: hue-rotate(20deg) }
+            &-12 { c: magenta; filter: hue-rotate(20deg) }
+            &-13 { c: red; filter: hue-rotate(20deg) }
+            &-14 { c: orange; filter: hue-rotate(20deg) }
+            &-15 { c: yellow; filter: hue-rotate(20deg) }
+            &-15 { c: blue; filter: hue-rotate(40deg) }
+            &-16 { c: cyan; filter: hue-rotate(40deg) }
+            &-17 { c: green; filter: hue-rotate(40deg) }
+            &-18 { c: violet; filter: hue-rotate(40deg) }
+            &-19 { c: magenta; filter: hue-rotate(40deg) }
+            &-20 { c: red; filter: hue-rotate(40deg) }
+        }
+        :not(#z) .bg-color {
+            &-0  { c: 0 0 blue }
+            &-1  { c: 0 0 cyan }
+            &-2  { c: 0 0 green }
+            &-3  { c: 0 0 violet }
+            &-4  { c: 0 0 magenta }
+            &-5  { c: 0 0 red }
+            &-6  { c: 0 0 orange }
+            &-7  { c: 0 0 yellow }
+            &-8  { c: 0 0 blue; filter: hue-rotate(20deg) }
+            &-9  { c: 0 0 cyan; filter: hue-rotate(20deg) }
+            &-10 { c: 0 0 green; filter: hue-rotate(20deg) }
+            &-11 { c: 0 0 violet; filter: hue-rotate(20deg) }
+            &-12 { c: 0 0 magenta; filter: hue-rotate(20deg) }
+            &-13 { c: 0 0 red; filter: hue-rotate(20deg) }
+            &-14 { c: 0 0 orange; filter: hue-rotate(20deg) }
+            &-15 { c: 0 0 yellow; filter: hue-rotate(20deg) }
+            &-15 { c: 0 0 blue; filter: hue-rotate(40deg) }
+            &-16 { c: 0 0 cyan; filter: hue-rotate(40deg) }
+            &-17 { c: 0 0 green; filter: hue-rotate(40deg) }
+            &-18 { c: 0 0 violet; filter: hue-rotate(40deg) }
+            &-19 { c: 0 0 magenta; filter: hue-rotate(40deg) }
+            &-20 { c: 0 0 red; filter: hue-rotate(40deg) }
         }
     }
 
