fix: custom width for app to affect 'status' window

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1200,8 +1200,8 @@ ac5 = var(--ac-5)
         c: 0 0 bg1
 
         @media (min-width: 1441px) {
-            /// Feat -> Custom app width.
-            &, /._11ARv {
+            /// Feat -> Custom app & status width.
+            &, /._11ARv, /._2x-Yl {
                 width: calc(100% - 38px) i
                 max-width: var(--app-width) i
             }
