--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1229,6 +1229,9 @@ ac5 = var(--ac-5)
             border-bottom: 1px solid bg5 i
             &::after { display: none i }
 
+            /// Align 'loading results' spinner inside input.
+            ._1pp2N { padding-right: 5px }
+
             /// Remove animation.
             /._1yO24 { animation: none i }
         }
