--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1254,11 +1254,13 @@ ac5 = var(--ac-5)
                     /// Feat -> Alerts.
                     if (alerts == 'hide') {
                         & > div { display: none i }
+                    } else if (alerts == 'notifications') {
+                        & > div {
+                            border-bottom: 1px solid bg5 i
+                            &._1evad { display: none i }
+                        }
                     } else {
                         border-bottom: 1px solid bg5 i
-                        if (alerts == 'notifications') {
-                            & > ._1evad { display: none i }
-                        }
                     }
                 }
             }
