--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1426,9 +1426,15 @@ ac5 = var(--ac-5)
 
         /// Footer.
         > footer {
-            /// Compose area wrapper.
-            > .copyable-area, [data-list-scroll-container] {
+            /// Compose border.
+            ../> header ~ div[style *= 'height: 0px'] {
                 border-top: 1px solid bg5 i
+            }
+
+            /// Popover border.
+            .velocity-animating,
+            div[style $= 'translateY(0px);'] {
+                box-shadow: 0 -1px 0 bg5 i
             }
 
             /// Chat -> Select messages.
